Improve the Catalog constructors.